--- a/project/code/aluguelDeCarros/src/main/resources/application.properties
+++ b/project/code/aluguelDeCarros/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=aluguelDeCarros
+spring.datasource.url=jdbc:h2:mem:aluguelCarros
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
